<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Plae</string>
    <string name="todo">TODO</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="user">user</string>
    <string name="pass">pass</string>
    <string name="login">login</string>
    <string name="title_activity_home__user">Home_User</string>
    <string name="textview">TextView</string>
    <string name="logout">LOGOUT</string>
    <string name="image_game">image_game</string>
    <string name="game_name_user">game_name_user</string>
    <string name="free">free</string>
    <string name="alterar_nome">Alterar Nome</string>
    <string name="alterar_password">Alterar Password</string>
    <string name="adicionar_saldo">Adicionar saldo</string>
    <string name="as_minhas_reservas">As Minhas Reservas</string>
    <string name="nome">Nome</string>
    <string name="balance_down">balance_down</string>
    <string name="password_down">password_down</string>
    <string name="user_img">user_img</string>
    <string name="balance_up">balance_up</string>
    <string name="password_up">password_up</string>
    <string name="name_up">name_up</string>
    <string name="name_down">name_down</string>
    <string name="_5_00">5.00€</string>
    <string name="lll">lll</string>
    <string name="adicionar_jogo">Adicionar Jogo</string>

    <string-array name="hours_array">
        <item>7:00</item>
        <item>7:30</item>
        <item>8:00</item>
        <item>8:30</item>
        <item>9:00</item>
        <item>9:30</item>
        <item>10:00</item>
        <item>10:30</item>
        <item>11:00</item>
        <item>11:30</item>
        <item>12:00</item>
        <item>12:30</item>
        <item>13:00</item>
        <item>13:30</item>
        <item>14:00</item>
        <item>14:30</item>
        <item>15:00</item>
        <item>15:30</item>
        <item>16:00</item>
        <item>16:30</item>
        <item>17:00</item>
        <item>17:30</item>
        <item>18:00</item>
        <item>18:30</item>
        <item>19:00</item>
        <item>19:30</item>
        <item>20:00</item>
        <item>20:30</item>
        <item>21:00</item>
        <item>21:30</item>
        <item>22:00</item>
        <item>22:30</item>
        <item>23:00</item>
        <item>23:30</item>
    </string-array>

</resources>
