<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".Login">

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="263dp"
        android:layout_height="36dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="36dp"
        android:background="@color/colorSelected"
        android:fontFamily="@font/quicksand"
        android:onClick="signIn"
        android:text="Login"
        android:textAppearance="@android:style/TextAppearance"
        android:textColor="@color/colorLetters"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/p"
        tools:targetApi="jelly_bean"
        tools:text="@string/login" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/logo" />

    <LinearLayout
        android:id="@+id/u"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo">

        <ImageView
            android:id="@+id/user"
            android:layout_width="38dp"
            android:layout_height="45dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="44dp"
            android:contentDescription="@string/user"
            app:layout_constraintEnd_toStartOf="@+id/txtEmail"
            app:srcCompat="@drawable/user" />

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="84dp"
            android:layout_marginTop="44dp"
            android:ems="10"
            android:fontFamily="@font/quicksand"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/p"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/u">

        <ImageView
            android:id="@+id/password"
            android:layout_width="38dp"
            android:layout_height="34dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="28dp"
            android:layout_weight="1"
            android:contentDescription="@string/pass"
            app:layout_constraintEnd_toStartOf="@+id/txtPass"
            app:layout_constraintTop_toBottomOf="@+id/user"
            app:srcCompat="@drawable/password" />

        <EditText
            android:id="@+id/txtPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="84dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:ems="10"
            android:fontFamily="@font/quicksand"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtEmail" />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>
