<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/main1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="8dp"
        app:cardBackgroundColor="@color/colorCard"
        app:cardCornerRadius="15dp"
        app:cardElevation="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:cardCornerRadius="#00ffd68d"
        tools:cardElevation="#662d2d2d">

        <Button
            android:id="@+id/btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#00ffd68d" />

        <LinearLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_game"
                android:layout_width="11dp"
                android:layout_height="89dp"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:contentDescription="@string/image_game"
                app:srcCompat="@drawable/cards" />

            <TextView
                android:id="@+id/game_name_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/game_name_user"
                android:textSize="30sp"
                tools:text="Dardos" />

            <ImageView
                android:id="@+id/image_ocuppied"
                android:layout_width="wrap_content"
                android:layout_height="57dp"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:contentDescription="@string/free"
                app:srcCompat="@drawable/free" />
        </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>