<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".Profile_User">

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/bottomNavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorBar"
        android:fontFamily="@font/quicksand_medium"
        android:theme="@style/BottomNavigationTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_menu">

    </android.support.design.widget.BottomNavigationView>

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBar"
        android:minHeight="?attr/actionBarSize"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="132dp"
        tools:layout_editor_absoluteY="0dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            app:srcCompat="@drawable/logo_icon"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="28dp"
            android:contentDescription="@string/lll" />

        <TextView
            android:id="@+id/balanceU"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="@color/colorBar"
            android:fontFamily="@font/quicksand_medium"
            android:text="@string/_5_00"
            android:textColor="@color/colorLetters"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp" />
    </android.support.v7.widget.Toolbar>


    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="109dp"
        android:layout_height="109dp"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="32dp"
        android:adjustViewBounds="false"
        android:background="@drawable/circle_shape"
        android:clickable="false"
        android:gravity="center_horizontal"
        android:src="@drawable/add"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/my_reservations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/quicksand"
        android:text="@string/as_minhas_reservas"
        android:textColor="@color/colorLetters"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amount" />

    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/quicksand_medium"
        android:gravity="center_horizontal"
        android:text="@string/nome"
        android:textColor="@color/colorLetters"
        android:textSize="30sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_image"
        tools:layout_editor_absoluteX="8dp" />


    <android.support.v7.widget.RecyclerView
        android:id="@+id/user_reserves"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fadeScrollbars="true"
        android:paddingBottom="400dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_reservations"
        app:layout_constraintVertical_bias="0.0">

    </android.support.v7.widget.RecyclerView>


    <EditText
        android:id="@+id/amount"
        android:layout_width="200dp"
        android:layout_height="38dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:fontFamily="@font/quicksand"
        android:hint="Quantia"
        android:textColor="@color/colorLetters"
        android:textSize="14sp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/add_amount"
        android:layout_width="wrap_content"
        android:layout_height="29dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorBar"
        android:fontFamily="@font/quicksand"
        android:onClick="addAmount"
        android:text="Adicionar"
        android:textColor="@color/colorLetters"
        android:visibility="visible"
        app:layout_constraintStart_toEndOf="@+id/amount"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:fontFamily="@font/quicksand"
        android:text="Adicionar Saldo"
        android:textColor="@color/colorLetters"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_name" />

</android.support.constraint.ConstraintLayout>